// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EncodingArgsService (characterization) createAudioEncodingArgs AAC 5.1 downmix to stereo 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-vn",
  "-c:a",
  "libfdk_aac",
  "-af",
  ""lowpass=c=LFE:f=120,pan=stereo|FL=.3FL+.21FC+.3FLC+.21SL+.21BL+.15BC+.21LFE|FR=.3FR+.21FC+.3FRC+.21SR+.21BR+.15BC+.21LFE,volume=1.6"",
  "-map",
  "0:1",
  "-map_chapters",
  "-1",
  "-f",
  "mp4",
  ""/transcode/42/audio_aac.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createAudioEncodingArgs AAC 5.1 multichannel (no downmix) 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-vn",
  "-c:a",
  "libfdk_aac",
  "-ac",
  "6",
  "-map",
  "0:1",
  "-map_chapters",
  "-1",
  "-f",
  "mp4",
  ""/transcode/42/audio_aac.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createAudioEncodingArgs AAC channels above MAX clamp 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-vn",
  "-c:a",
  "libfdk_aac",
  "-ac",
  "8",
  "-map",
  "0:1",
  "-map_chapters",
  "-1",
  "-f",
  "mp4",
  ""/transcode/42/audio_aac.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createAudioEncodingArgs AAC stereo 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-vn",
  "-c:a",
  "libfdk_aac",
  "-map",
  "0:1",
  "-map_chapters",
  "-1",
  "-f",
  "mp4",
  ""/transcode/42/audio_aac.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createAudioEncodingArgs OPUS downmix to stereo 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-vn",
  "-b:a",
  "128K",
  "-c:a",
  "libopus",
  "-ac",
  "2",
  "-mapping_family",
  "0",
  "-map",
  "0:1",
  "-map_chapters",
  "-1",
  "-f",
  "mp4",
  ""/transcode/42/audio_aac.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createAudioEncodingArgs OPUS stereo (bitrate applied) 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-vn",
  "-b:a",
  "128K",
  "-c:a",
  "libopus",
  "-map",
  "0:1",
  "-map_chapters",
  "-1",
  "-f",
  "mp4",
  ""/transcode/42/audio_aac.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createAudioEncodingArgs OPUS_SURROUND multichannel (per-channel bitrate + mapping_family 1) 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-vn",
  "-b:a",
  "384K",
  "-c:a",
  "libopus",
  "-ac",
  "6",
  "-mapping_family",
  "1",
  "-map",
  "0:1",
  "-map_chapters",
  "-1",
  "-f",
  "mp4",
  ""/transcode/42/audio_aac.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createAudioEncodingArgs URL input adds reconnect flags 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-vn",
  "-reconnect",
  "1",
  "-reconnect_on_http_error",
  "400,401,403,408,409,429,5xx",
  "-c:a",
  "libfdk_aac",
  "-map",
  "0:1",
  "-map_chapters",
  "-1",
  "-f",
  "mp4",
  ""/transcode/42/audio_aac.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createConcatSegmentArgs pinned args 1`] = `
[
  "-hide_banner",
  "-y",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-f",
  "concat",
  "-safe",
  "0",
  "-i",
  ""/transcode/42/concat.txt"",
  "-c",
  "copy",
  ""/transcode/42/out_1080.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createMP4BoxPackArgs pinned args 1`] = `
[
  "-dash",
  "6000",
  "-profile",
  "onDemand",
  "-segment-name",
  ""v_1080_$Init=$"",
  "-out",
  ""/transcode/42/v_1080.mpd:dual"",
  ""/transcode/42/v_1080.mp4"",
]
`;

exports[`EncodingArgsService (characterization) createRcloneMoveArgs with include filter 1`] = `
[
  "--config",
  "/config/rclone.conf",
  "--low-level-retries",
  "5",
  "-v",
  "--use-json-log",
  "--stats",
  "3s",
  "move",
  ""/transcode/42/out"",
  ""gd:media/42"",
  "--include",
  "*.mp4",
]
`;

exports[`EncodingArgsService (characterization) createRcloneMoveArgs without include filter 1`] = `
[
  "--config",
  "/config/rclone.conf",
  "--low-level-retries",
  "5",
  "-v",
  "--use-json-log",
  "--stats",
  "3s",
  "move",
  ""/transcode/42/out"",
  ""gd:media/42"",
]
`;

exports[`EncodingArgsService (characterization) createRcloneMoveThumbArgs move (default) 1`] = `
[
  "--config",
  "/config/rclone.conf",
  "--low-level-retries",
  "5",
  "-v",
  "--use-json-log",
  "--stats",
  "3s",
  "move",
  ""/transcode/42/thumbnails"",
  ""gd:media/42/thumbnails"",
]
`;

exports[`EncodingArgsService (characterization) createRcloneMoveThumbArgs sync 1`] = `
[
  "--config",
  "/config/rclone.conf",
  "--low-level-retries",
  "5",
  "-v",
  "--use-json-log",
  "--stats",
  "3s",
  "sync",
  ""/transcode/42/thumbnails"",
  ""gd:media/42/thumbnails"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs AV1 animation tune (skips scm=0) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-svtav1-params",
  ""tune=0:enable-overlays=1:film-grain=0:film-grain-denoise=0:scd=1:sharpness=0:enable-qm=1:qm-min=0:enable-variance-boost=1:luminance-qp-bias=30:keyint=48"",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs AV1 main preset (no HDR params) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-svtav1-params",
  ""tune=0:enable-overlays=1:film-grain=0:film-grain-denoise=0:scd=1:sharpness=0:enable-qm=1:qm-min=0:enable-variance-boost=1:scm=0:luminance-qp-bias=30:keyint=48"",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs AV1 with HDR params 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-color_primaries",
  "bt2020",
  "-svtav1-params",
  ""tune=0:enable-overlays=1:film-grain=0:film-grain-denoise=0:scd=1:sharpness=0:enable-qm=1:qm-min=0:enable-variance-boost=1:scm=0:mastering-display=foo:keyint=48"",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs H264 >=1440 with source x264 params (profile level) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "23",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-level:v",
  "5.1",
  "-x264-params",
  ""ref=4\\:deblock=-1,-1"",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:2160",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs H264 HDR tonemap 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "23",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080,zscale=t=linear:npl=100,format=gbrpf32le,tonemap=tonemap=mobius:desat=0,zscale=p=bt709:t=bt709:m=bt709:r=tv:d=error_diffusion,format=yuv420p",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs H264 with encoding setting (crf) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "23",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs URL input adds reconnect flags 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-reconnect",
  "1",
  "-reconnect_on_http_error",
  "400,401,403,408,409,429,5xx",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs VP9 useLowerRate (baseBitrate below maxrate) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "5000K",
  "-bufsize",
  "10000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs VP9 with encoding setting 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs VP9 without encoding setting 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;

exports[`EncodingArgsService (characterization) createVideoEncodingArgs split-from / split-duration 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-ss",
  "10.5",
  "-i",
  ""/transcode/42/source.mkv"",
  "-t",
  "30",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  ""/transcode/42/v_1080.webm"",
]
`;
